[tool.poetry]
name = "supername"
version = "0.1.0"
description = "supername project"
authors = ["trbouma <trbouma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
typer = "^0.12.0"
secp256k1 = "^0.14.0"
loguru = "^0.7.2"
bolt11 = "^2.0.5"
bip32 = "^3.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
click = "^8.1.7"
environs = "9.5.0"
pydantic = "1.10.14"
httpx = "0.25.2"
sqlalchemy = "1.3.24"
sqlalchemy-aio = "0.17.0"
mnemonic = "0.20"
asyncio = "^3.4.3"
socksio = "^1.0.0"

[tool.poetry.scripts]
supername = "supername.main:cli"
supersend = "supername.main:cli"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


