[tool.poetry]
name = "supername"
version = "0.1.0"
description = "supername project"
authors = ["trbouma <trbouma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
bip32 = "^3.4"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
click = "^8.1.7"
pydantic = "1.10.14"
httpx = "0.25.2"
sqlalchemy = "1.3.24"
asyncio = "^3.4.3"
socksio = "^1.0.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
supername = "supername.main:cli"
super = "supername.main:cli"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


